feat: Add support for OBKV-Redis

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -271,6 +271,10 @@ REDIS_USE_CLUSTERS=false
 REDIS_CLUSTERS=
 REDIS_CLUSTERS_PASSWORD=
 
+# Whether to use OBKV instead of Redis.
+REDIS_USE_OBKV=false
+
+
 # ------------------------------
 # Celery Configuration
 # ------------------------------
