--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -641,7 +641,7 @@ services:
 
   # plugin daemon
   plugin_daemon:
-    image: dify-plugin-daemon:test0711v3
+    image: langgenius/dify-plugin-daemon:0.0.10-local
     restart: always
     environment:
       # Use the shared environment variables.
