Append content to the setup-mysql-env.sh script

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -203,6 +203,9 @@ DB_DATABASE=dify
 # Database URI scheme
 SQLALCHEMY_DATABASE_URI_SCHEME=postgresql
 
+# choose if use mysql cache to replace redis,only when DB_TYPE and CACHE_SCHEMA are both mysql,it will use mysql cache to replace redis
+CACHE_SCHEME=mysql
+
 # The size of the database connection pool.
 # The default is 30 connections, which can be appropriately increased.
 SQLALCHEMY_POOL_SIZE=30
@@ -276,6 +279,7 @@ REDIS_CLUSTERS_PASSWORD=
 # ------------------------------
 
 # Use redis as the broker, and redis db 1 for celery broker.
+# Attention: if use mysql cache to replace redis,you should change CELERY_BROKER_UR to:sqla+mysql+pymysql://root%40test:difyai123456@oceanbase:2881/test,else:redis://:difyai123456@redis:6379/1
 # Format as follows: `redis://<redis_username>:<redis_password>@<redis_host>:<redis_port>/<redis_database>`
 # Example: redis://:difyai123456@redis:6379/1
 # If use Redis Sentinel, format as follows: `sentinel://<sentinel_username>:<sentinel_password>@<sentinel_host>:<sentinel_port>/<redis_database>`
