--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -514,8 +514,8 @@ services:
     depends_on:
       oceanbase:
         condition: service_healthy
-      # redis:
-      #   condition: service_started
+      redis:
+        condition: service_started
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -543,8 +543,8 @@ services:
     depends_on:
       oceanbase:
         condition: service_healthy
-      # redis:
-      #   condition: service_started
+      redis:
+        condition: service_started
     volumes:
       # Mount the storage directory to the container, for storing user files.
       - ./volumes/app/storage:/app/api/storage
@@ -601,19 +601,19 @@ services:
       timeout: 3s
       retries: 60
 
-  # The redis cache.
-  # redis:
-  #   image: redis:6-alpine
-  #   restart: always
-  #   environment:
-  #     REDISCLI_AUTH: ${REDIS_PASSWORD:-difyai123456}
-  #   volumes:
-  #     # Mount the redis data directory to the container.
-  #     - ./volumes/redis/data:/data
-  #   # Set the redis password when startup redis server.
-  #   command: redis-server --requirepass ${REDIS_PASSWORD:-difyai123456}
-  #   healthcheck:
-  #     test: [ 'CMD', 'redis-cli', 'ping' ]
+  #The redis cache
+  redis:
+    image: redis:6-alpine
+    restart: always
+    environment:
+      REDISCLI_AUTH: ${REDIS_PASSWORD:-difyai123456}
+    volumes:
+      # Mount the redis data directory to the container.
+      - ./volumes/redis/data:/data
+    # Set the redis password when startup redis server.
+    command: redis-server --requirepass ${REDIS_PASSWORD:-difyai123456}
+    healthcheck:
+      test: [ 'CMD', 'redis-cli', 'ping' ]
 
   # The DifySandbox
   sandbox:
