--- a/.github/workflows/publish-api-dockerhub.yml
+++ b/.github/workflows/publish-api-dockerhub.yml
@@ -15,7 +15,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  DIFY_API_IMAGE_NAME: ${{ vars.DIFY_API_IMAGE_NAME || 'oceanbase/dify-api' }}
+  DIFY_API_IMAGE_NAME: oceanbase/dify-api
 
 jobs:
   build:
@@ -24,11 +24,11 @@ jobs:
       matrix:
         include:
           - service_name: "build-api-amd64"
-            image_name_env: "DIFY_API_IMAGE_NAME"
+            image_name: "oceanbase/dify-api"
             context: "api"
             platform: linux/amd64
           - service_name: "build-api-arm64"
-            image_name_env: "DIFY_API_IMAGE_NAME"
+            image_name: "oceanbase/dify-api"
             context: "api"
             platform: linux/arm64
 
@@ -44,6 +44,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -57,7 +58,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env[matrix.image_name_env] }}
+          images: ${{ matrix.image_name }}
 
       - name: Build Docker image
         id: build
@@ -67,7 +68,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           build-args: COMMIT_SHA=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env[matrix.image_name_env] }},push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,name=${{ matrix.image_name }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=${{ matrix.service_name }}
           cache-to: type=gha,mode=max,scope=${{ matrix.service_name }}
 
@@ -104,6 +105,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -111,7 +113,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.DIFY_API_IMAGE_NAME }}
+          images: oceanbase/dify-api
           tags: |
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') && !contains(github.ref, '-') }}
             type=ref,event=branch
@@ -121,14 +123,14 @@ jobs:
       - name: Create manifest list and push
         working-directory: /tmp/digests
         env:
-          IMAGE_NAME: ${{ env.DIFY_API_IMAGE_NAME }}
+          IMAGE_NAME: oceanbase/dify-api
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf "$IMAGE_NAME@sha256:%s " *)
 
       - name: Inspect image
         env:
-          IMAGE_NAME: ${{ env.DIFY_API_IMAGE_NAME }}
+          IMAGE_NAME: oceanbase/dify-api
           IMAGE_VERSION: ${{ steps.meta.outputs.version }}
         run: |
           docker buildx imagetools inspect "$IMAGE_NAME:$IMAGE_VERSION" 
