--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -25,8 +25,8 @@ COPY pyproject.toml uv.lock ./
 # 2024-12-19: 修改为官方 PyPI 源，解决网络超时问题
 # 原配置: RUN uv sync --index-url https://pypi.tuna.tsinghua.edu.cn/simple
 # 修改原因: 清华源和阿里云源都出现网络超时，改用官方源提高稳定性
-# 使用官方源，并设置更长的超时时间
-RUN uv sync --timeout 600
+# 使用官方源，uv sync 默认使用 https://pypi.org/simple/
+RUN uv sync
 
 # production stage
 FROM base AS production
