feat:Now,users can choose use redis or not.When using redis ,OCEANBASE_CLUSTER_NAME will become difyai-redis

--- a/.github/workflows/publish-api-dockerhub.yml
+++ b/.github/workflows/publish-api-dockerhub.yml
@@ -6,9 +6,10 @@ on:
       - "main"
       - "deploy/dev"
       - "deploy/enterprise"
-      - "cache-test"
     tags:
       - "*"
+  release:
+    types: [published]
 
 concurrency:
   group: build-push-api-${{ github.head_ref || github.run_id }}
