--- a/docker/docker-compose-redis.yaml
+++ b/docker/docker-compose-redis.yaml
@@ -500,7 +500,7 @@ x-shared-env: &shared-api-worker-env
 services:
   # API service
   api:
-    image: oceanbase/dify-api:cache-test
+    image: oceanbase/dify-api:1.4.0
     restart: always
     environment:
       # Use the shared environment variables.
@@ -529,7 +529,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: oceanbase/dify-api:cache-test
+    image: oceanbase/dify-api:1.4.0
     restart: always
     environment:
       # Use the shared environment variables.
