--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -526,7 +526,7 @@ x-shared-env: &shared-api-worker-env
 services:
   # API service
   api:
-    image: dify-on-mysql:shiver-1.7.0
+    image: oceanbase/dify-api:1.7.0
     restart: always
     environment:
       # Use the shared environment variables.
@@ -555,7 +555,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: dify-on-mysql:shiver-1.7.0
+    image: oceanbase/dify-api:1.7.0
     restart: always
     environment:
       # Use the shared environment variables.
@@ -582,7 +582,7 @@ services:
   # worker_beat service
   # Celery beat for scheduling periodic tasks.
   worker_beat:
-    image: dify-on-mysql:shiver-1.7.0
+    image: oceanbase/dify-api:1.7.0
     restart: always
     environment:
       # Use the shared environment variables.
