--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -989,7 +989,7 @@ services:
     ports:
       - "${OCEANBASE_VECTOR_PORT:-2881}:2881"
     healthcheck:
-      test: [ 'CMD-SHELL', 'obclient -h127.0.0.1 -P2881 -uroot@test -p$${OB_TENANT_PASSWORD} -e "SELECT 1;"' ]
+      test: [ 'CMD-SHELL', 'obclient -h127.0.0.1 -P2881 -uroot@test -p$${OB_TENANT_PASSWORD} -e "SHOW DATABASES;"' ]
       interval: 10s
       retries: 30
       start_period: 30s
